[activity layouts] list layout for activities

--- a/app/views/assemblies/projects_show.html.haml
+++ b/app/views/assemblies/projects_show.html.haml
@@ -94,7 +94,10 @@
           .tab-pane{id: "project-#{index}"}
             %h2.printonly
               = assembly_inclusion.includable.title
-            = render '/shared/activity', activity: assembly_inclusion.includable
+            - if assembly_inclusion.includable.layout_name
+              = render "/shared/activity_layouts/#{assembly_inclusion.includable.layout_name}", activity: assembly_inclusion.includable
+            - else
+              = render '/shared/activity', activity: assembly_inclusion.includable
             %hr
             .row-fluid.section.noprint
               .span4.text-left
