--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -16,6 +16,7 @@
 .update-warning
 = semantic_form_for [:admin, @activity], validate: true do |f|
   = f.inputs name: "Activity Details" do
+    = f.input :layout_name, as: :select, collection: Activity::LAYOUT_NAMES
     = f.input :published
     = f.input :title
     %li
