--- a/app/views/admin/assemblies/_form.html.haml
+++ b/app/views/admin/assemblies/_form.html.haml
@@ -1,6 +1,7 @@
 = semantic_form_for [:admin, @assembly] do |f|
   = f.inputs do
     = f.input :assembly_type, as: :select, collection: Assembly::ASSEMBLY_TYPE_SELECTION
+    = f.input :published, as: :boolean
     = f.input :title
     = f.input :description
     = render '/shared/filepicker_group', label_text: "Image", param: "assembly[image_id]", value: @assembly.image_id
