[knife-products] add pics

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -14,6 +14,9 @@
   -o-transition-duration: 0.5s
   transition-duration: 0.5s
 
+.modal
+  max-height: 500px
+
 .hidden
   display: none
   position: absolute
