--- a/app/views/ingredients/index.html.haml
+++ b/app/views/ingredients/index.html.haml
@@ -10,6 +10,9 @@
         %label.checkbox
           %input(ng-model="includeRecipes" type="checkbox")
             Include Recipes
+        %button.btn.btn-primary(ng-click="loadIngredients()")
+          More
         %i.icon-spinner.icon-spin(ng-show="dataLoading")
+
   .row.section-small
     .ingredient-index.span12(ng-grid="gridOptions")
