--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -11,11 +11,11 @@
       %p An exceptional knife should be the cornerstone of a cook's arsenal. It becomes an extension of your own hands; the tool with which you will create art and bring refinement to the table. A beautiful, high-quality knife will follow you to every kitchen and last a lifetime if properly cared for. Handcrafted Japanese knives in particular bring elegance and sophistication to any dish—a perfectly sliced piece of salmon; a delicate chiffonade; a meticulous dice—all expertly executed with slender, high-performance Japanese blades. Our readers have asked what knives we use when we cook, and this curated collection of hand-forged artisan knives, each completely unique and in finite supply, is our answer. In other words: Only the best.
 
 /__________ START MODALS _____________/
-#asai-ao-1.modal.hide.fade
-  .modal-header
+#asai-ao-1.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Asai Chef's Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550', :class => "main-image"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550', :class => "main-image hidden"
     .section
@@ -28,25 +28,25 @@
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75'
     %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
 
-  .modal-footer
+  .knife-modal-footer
     = buy_now(350234061,325)
 
-#asai-ao-2.modal.hide.fade
-  .modal-header
+#asai-ao-2.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Asai Petty Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
     %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(350067813,169)
 
 
-#ohishi-hammer-1.modal.hide.fade
-  .modal-header
+#ohishi-hammer-1.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Ohishi Chef's Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4', :class => "main-image"    
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM', :class => "main-image hidden"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7', :class => "main-image hidden"
@@ -63,16 +63,16 @@
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7/convert?fit=max&w=75'
 
     %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.  
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(345914261,129)
 
 
 
-#ohishi-hammer-2.modal.hide.fade
-  .modal-header
+#ohishi-hammer-2.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Ohishi Petty Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G', :class => "main-image"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT', :class => "main-image hidden"
     .section
@@ -85,14 +85,14 @@
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75'
 
     %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(345912499,84)
 
-#yoshikane-sld-1.modal.hide.fade
-  .modal-header
+#yoshikane-sld-1.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Yoshikane Chef's Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&h=375', :class => "main-image"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6', :class => "main-image hidden"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', :class => "main-image hidden"
@@ -109,14 +109,14 @@
           %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7")
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
     %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(345920775,464)
 
-#yoshikane-sld-2.modal.hide.fade
-  .modal-header
+#yoshikane-sld-2.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Yoshikane Petty Knife
-  .modal-body
+  .knife-modal-body
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&h=375', :class => "main-image"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi', :class => "main-image hidden"
     .section
@@ -130,14 +130,14 @@
   
     .media-body
       %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(345920201,339)
 
-#sharpening-1.modal.hide.fade
-  .modal-header
+#sharpening-1.modal.knife-modal.hide.fade
+  .knife-modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
     %h3 Sharpening Stone Kit
-  .modal-body.media
+  .knife-modal-body.media
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=500', :class => "main-image"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=500', :class => "main-image hidden"
     = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=500', :class => "main-image hidden"
@@ -159,7 +159,7 @@
 
     .media-body
       %p.section Sharpening copy
-  .modal-footer.section
+  .knife-modal-footer.section
     = buy_now(350238365,154)
 
 /____________ START KNIFE PRODUCTS_____________ / 
