[knife] scrolling for touch

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -156,6 +156,7 @@
     left: 10px
     right: 10px
     overflow-y: auto
+    -webkit-overflow-scrolling: touch
     img
       width: 100%
   .knife-modal-footer
