--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@
  *= require profiles
  *= require bootstrap-wysihtml5
  *= require angular-ui
- *= require ng-grid
+ *= require ng-grid.min
  *= require alert
  *= require registration
  *= require timeline
