--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -31,6 +31,9 @@
                     %li= link_to 'ChefSteps Recipes', gallery_index_url(activity_type: "Recipe")
                     %li= link_to 'Community Recipes', gallery_index_url(source: "community")
                     %li= link_to 'Add Recipe', new_activity_url
+                    -if can? :update, Ingredient
+                      %li= link_to 'Manage Ingredients', ingredients_path
+
                 %li.dropdown
                   .nav-item-border
                   = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
