--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -185,14 +185,13 @@
     .span12.section
       .annotation-slider-container
         .annotation-slider
+          .annotation-close-overlay
           .annotation-buttons
             %a.annotation-slider-btn#asai-1(data-annotation-slider-reveal='left')
               +
             %a.annotation-slider-btn#asai-2(data-annotation-slider-reveal='right')
               +
           .annotation-slider-note.note-left
-            %a.annotation-slider-close
-              x
             %h3 Asai Chef's Knife
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550', :class => "main-image"
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550', :class => "main-image hidden"
@@ -209,8 +208,6 @@
           .annotation-slider-image
             = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/qzxRQ0rPS2j4tFZKutmg')
           .annotation-slider-note.note-right
-            %a.annotation-slider-close
-              x
             %h3 Asai Petty Knife
             = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
