--- a/app/assets/stylesheets/ingredients_index.css.sass
+++ b/app/assets/stylesheets/ingredients_index.css.sass
@@ -1,13 +1,25 @@
 @import mixins
 
 .ingredient-index-container
-  .controls
+  .navbar
+    padding-top: 56px
+
+  .navbar-inner
+    border-top: none
+    box-shadow: none
+    -webkit-box-shadow: none
+    background-color: white
+    padding-top: 10px
+
     form
       *
         margin-right: 20px
 
+  .grid
+    padding-top: 70px
+
   .ingredient-index
-    height: 520px
+    height: 560px
 
   .ngCellText
     i
