--- a/app/views/ingredients/index.html.haml
+++ b/app/views/ingredients/index.html.haml
@@ -1,20 +1,18 @@
 - content_for :title, "Ingredients"
 - content_for :description, "Batch edit ingredients"
 
-.ingredient-index-container.container.section(ng-controller="IngredientsIndexController" ng-cloak)
+.ingredient-index-container.container.relative(ng-controller="IngredientsIndexController" infinite-scroll="loadIngredients()" infinite-scroll-distance="3")
 
-  .row.section.controls
-    .span12
-      %form.form-inline
-        %input.input-medium.search-query(type="search" placeholder="Ingredient name..." ng-model="searchString")
-        %label.checkbox
-          %input(ng-model="includeRecipes" type="checkbox")
-            Include Recipes
-        %i.icon-spinner.icon-spin(ng-show="dataLoading")
+  .navbar.navbar-fixed-top
+    .navbar-inner
+      .container
+        .nav
+          %form.form-inline.navbar-form
+            %input.input-medium.search-query(type="search" placeholder="Ingredient name..." ng-model="searchString")
+            %label.checkbox
+              %input(ng-model="includeRecipes" type="checkbox")
+                Include Recipes
+            %i.icon-spinner.icon-spin.icon-large(ng-show="dataLoading")
 
-  .row.section-small
+  .row.grid
     .ingredient-index.span12(ng-grid="gridOptions")
-
-  .row.section-small
-    %button.btn.btn-primary(ng-click="loadIngredients()")
-      Load more...
