--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -237,6 +237,23 @@
       @include boxsizing
       h3
         margin: 0px
+      .annotation-slider-note-gallery
+        .annotation-slider-note-gallery-images
+          position: relative
+          height: 172px
+          .annotation-slider-note-gallery-image
+            position: absolute
+            top: 0px
+            opacity: 0
+          .annotation-slider-note-gallery-image:nth-of-type(1)
+            opacity: 1
+        .annotation-slider-note-gallery-thumbnails
+          float: left
+          width: 100%
+          margin: 10px 0px
+          .annotation-slider-note-gallery-thumbnail
+            float: left
+            margin-right: 5px
     .note-left
       left: -300px
       top: 0px
