[knife] apply to the rest

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -286,6 +286,26 @@
         left: 73%
         top: 54%
 
+      #ohishi-1
+        left: 23%
+        top: 55%
+      
+      #ohishi-2
+        left: 83%
+        top: 54%
+
+      #yoshikane-1
+        left: 27%
+        top: 15%
+      
+      #yoshikane-2
+        left: 83%
+        top: 69%
+
+      #sharpening
+        left: 40%
+        top: 75%
+
 @media (max-width: 480px)
   .annotation-slider-note
     width: 100%
