--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -231,6 +231,9 @@
 /           %a(href='#sharpening-1' data-target='#sharpening-1' data-toggle='modal') +
 /         = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
 
+
+// ASAI //
+
 .knife.first
   .row.section
     .span10.offset2
@@ -263,16 +266,6 @@
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=75'
                 .annotation-slider-note-gallery-thumbnail
                   = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75'
-            / = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=550', :class => "main-image"
-            / = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=550', :class => "main-image hidden"
-            / .section
-            /   %ul.inline
-            /     %li
-            /       %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3")
-            /         = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xgPYrtt9ROuDw4Qxany3/convert?fit=max&w=75'
-            /     %li
-            /       %a(href="https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw")
-            /         = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/RlVj5HwlRJgi431Kcqsw/convert?fit=max&w=75'
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
             = buy_now(350234061,325)
           .annotation-slider-image
@@ -285,6 +278,178 @@
             %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
             = buy_now(350067813,169)
 
+// END ASAI //
+
+// OHISHI //
+
+.knife.section
+  .row.section
+    .span10.offset2
+      %h4.media-heading Ohishi Hammer
+      Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty.
+
+.container
+  .row.section
+    .span12.section
+      .annotation-slider-container
+        .annotation-slider
+          .annotation-close-overlay
+          .annotation-buttons
+            %a.annotation-slider-btn#ohishi-1(data-annotation-slider-reveal='left')
+              +
+            %a.annotation-slider-btn#ohishi-2(data-annotation-slider-reveal='right')
+              +
+          .annotation-slider-note.note-left
+            %a.annotation-close-btn
+              %i.icon-remove
+            %h3 Ohishi Chef's Knife
+            .annotation-slider-note-gallery
+              .annotation-slider-note-gallery-images
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7'
+              .annotation-slider-note-gallery-thumbnails
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/JuAyLXdSMSLoIyuVAqA4/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/LNrdE7aRRLSaKt8gKtNM/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/THxjO9E1TEqCyWaeytT7/convert?fit=max&w=75'
+            %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
+            = buy_now(345914261,129)
+          .annotation-slider-image
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/XPuEItyPTOaL2iO5r79j')
+          .annotation-slider-note.note-right
+            %a.annotation-close-btn
+              %i.icon-remove
+            %h3 Ohishi Petty Knife
+            .annotation-slider-note-gallery
+              .annotation-slider-note-gallery-images
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT'
+              .annotation-slider-note-gallery-thumbnails
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/4VfViqxwSIO1O2kxWt5G/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/naTWQB6ySXOVZR1V4plT/convert?fit=max&w=75'
+            %p.section Perfect as a general purpose kitchen knife, this long, slender Petty blade has a VG10 super-steel core for clean cutting and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
+            = buy_now(345912499,84)
+
+// End Ohishi //
+
+// Start Yoshikane //
+
+.knife.section
+  .row.section
+    .span10.offset2
+      %h4.media-heading Yoshikane 
+      Widely regarded as one of the most influential knifemakers in Japan, Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry in his shop in Sanjo City.  Every Yoshikane knife is a work of art, each completely unique in its handmade construction, with a beauty matched only by performance—these blades are considered among the highest-quality available, with exceptional edge holding and comfortable feel.
+
+.container
+  .row.section
+    .span12.section
+      .annotation-slider-container
+        .annotation-slider
+          .annotation-close-overlay
+          .annotation-buttons
+            %a.annotation-slider-btn#yoshikane-1(data-annotation-slider-reveal='left')
+              +
+            %a.annotation-slider-btn#yoshikane-2(data-annotation-slider-reveal='right')
+              +
+          .annotation-slider-note.note-left
+            %a.annotation-close-btn
+              %i.icon-remove
+            %h3 Yoshikane Chef's Knife
+            .annotation-slider-note-gallery
+              .annotation-slider-note-gallery-images
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&h=161'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi'
+              .annotation-slider-note-gallery-thumbnails
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/byaPReR5RPauvhY1Ze0t/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/aMonSF5TCeKddFWFi2z6/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
+            %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
+            = buy_now(345920775,464)
+          .annotation-slider-image
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/MfWzTk4YRGm7SOQf2iUT')
+          .annotation-slider-note.note-right
+            %a.annotation-close-btn
+              %i.icon-remove
+            %h3 Yoshikane Petty Knife
+            .annotation-slider-note-gallery
+              .annotation-slider-note-gallery-images
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&h=161'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi'
+              .annotation-slider-note-gallery-thumbnails
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&w=75'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/bU8eukytRrmpN16RiOKi/convert?fit=max&w=75'
+            %p.section Best for detail slicing—think tomatoes and garlic—this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s suminagashi pattern (meaning "floating ink" in Japanese) together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
+            = buy_now(345920201,339)
+
+// End Yoshikane //
+
+// Start Sharpening Stones //
+.knife.section
+  .row.section
+    .span10.offset2
+      %h4.media-heading Sharpening Stones Kit 
+      :markdown 
+        A collection of high-quality knives requires a collection of high-quality waterstones to match. These professional-grade stones, designed specifically to sharpen high-quality steel, will keep your knives in superb condition for years to come. (Lower grade stones are often fragmented in their particle composition, making sharpening difficult and inconsistent.) Fix a broken tip, repair a damaged edge, polish your blade, or hone to razor sharp: This kit has everything you need to care for your finest knives. And [here’s how](http://www.chefsteps.com/activities/how-to-sharpen-a-knifecourse).
+
+.container
+  .row.section
+    .span12.section
+      .annotation-slider-container
+        .annotation-slider
+          .annotation-close-overlay
+          .annotation-buttons
+            %a.annotation-slider-btn#sharpening(data-annotation-slider-reveal='left')
+              +
+          .annotation-slider-note.note-left
+            %a.annotation-close-btn
+              %i.icon-remove
+            %h3 Sharpening Stone Kit
+            .annotation-slider-note-gallery
+              .annotation-slider-note-gallery-images
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=500'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=500'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=500'
+                .annotation-slider-note-gallery-image
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=500'
+              .annotation-slider-note-gallery-thumbnails
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/xZBHFGfRByCEXftfgE2Q/convert?fit=max&w=100'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/1hfmZ0YOQsC3DGZkCwXb/convert?fit=max&w=100'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/Uf9mCymiRjqGtRw7y8id/convert?fit=max&w=100'
+                .annotation-slider-note-gallery-thumbnail
+                  = image_tag 'https://d3awvtnmmsvyot.cloudfront.net/api/file/73gcpvPeSTCeCMGHMeDr/convert?fit=max&w=100'
+            %p.section Sharpening Copy
+            = buy_now(350238365,154)
+          .annotation-slider-image
+            = image_tag ('https://d3awvtnmmsvyot.cloudfront.net/api/file/t3l7VdjR1qjMMWTNufwJ')
+
+// End Sharpening Stones //
 = render 'layouts/footer'
 
 
